--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 
 <html>
-
+    <head>
+        <title>Project Red</title>
+        <link rel="stylesheet" href="main.css">
+    </head>
+    
     <body>
         <h1>Hello World</h1>
         <p>I'm hosted with GitHub pages.</p>
