Updated index with proper color scheme

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
         <title>Project Red</title>
         <link rel="stylesheet" href="main.css">
     </head>
-    
+
     <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub pages.</p>
+        <header>
+            <h1>Project Red</h1>
+        </header>
+        <hr>
+        <p>Coming 2021.</p>
     </body>
 
 </html>
