--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         </header>
         <hr>
         <p>Coming 2021.</p>
+        <!-- <div class="flex-container">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+        </div> -->
     </body>
 
 </html>
