added ranks page for website

--- a/crafting.html
+++ b/crafting.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Project Red | Home</title>
+        <title>Project Red | Crafting</title>
         <link rel="stylesheet" href="main.css">
     </head>
 
@@ -16,12 +16,7 @@
             <a href="./func.html">Functions</a>
         </header>
         <hr>
-        <p>Coming 2021.</p>
-        <!-- <div class="flex-container">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-        </div> -->
+        <p>Coming soon.</p>
     </body>
 
 </html>
