started crafting recipes page

--- a/crafting.html
+++ b/crafting.html
@@ -4,11 +4,12 @@
     <head>
         <title>Project Red | Crafting</title>
         <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="craft.css">
     </head>
 
     <body>
         <header>
-            <h1>Project Red</h1>
+            <h1>Project Red Crafting</h1>
 
             <a href="./index.html">Home</a>
             <a href="./ranks.html">Ranks</a>
@@ -16,7 +17,20 @@
             <a href="./func.html">Functions</a>
         </header>
         <hr>
-        <p>Coming soon.</p>
+        <nav class="sidenav">
+            <p>
+                <strong>Default</strong>
+                <br><a href="#door">Doors</a>
+            </p>
+        </nav>
+
+        <main>
+            <h2>Default</h2>
+            <h3 id="door">Doors</h3>
+            <p>Now with an iron ingot for the door handle, and results in two doors rather than 3.</p>
+            <img src="images/crafting/doors.gif" width="400px">
+        </main>
+        
     </body>
 
 </html>
