added door recipes for redstone rank

--- a/crafting.html
+++ b/crafting.html
@@ -21,14 +21,26 @@
             <p>
                 <strong>Default</strong>
                 <br><a href="#door">Doors</a>
+                <br>
+                <strong>Redstone</strong>
+                <br><a href="#door-rank">Doors</a>
             </p>
         </nav>
 
         <main>
-            <h2>Default</h2>
-            <h3 id="door">Doors</h3>
-            <p>Now with an iron ingot for the door handle, and results in two doors rather than 3.</p>
-            <img src="images/crafting/doors.gif" width="400px">
+            <section>
+                <h2>Default</h2>
+                <h3 id="door">Doors</h3>
+                <p>Now with an iron ingot for the door handle, and results in two doors rather than 3.</p>
+                <img src="images/crafting/doors.gif" width="400px">
+            </section>
+            <hr>
+            <section>
+                <h2>Redstone</h2>
+                <h3 id="door-rank">Doors</h3>
+                <p>Original recipe.</p>
+                <img src="images/crafting/rank_door.gif" width="400px">
+            </section>
         </main>
         
     </body>
