--- a/ranks.html
+++ b/ranks.html
@@ -20,23 +20,28 @@
             <h2>Table of Contents</h2>
 
             <ul style="list-style-type: none; padding: 0">
+                <li><a href="#oak" style="color:#bc7035">Oak</a></li>
                 <li><a href="#coal" style="color:#919599">Coal</a></li>
                 <li><a href="#copper" style="color:#e36414">Copper</a></li>
                 <li><a href="#iron" style="color:#edc4b3">Iron</a></li>
-                <li><a href="#redstone" style="color:#ef233c">Redstone</a></li>
                 <li><a href="#lapis" style="color:#0466C8">Lapis</a></li>
-                <li><a href="#quartz" style="color:#EDF2F4">Quartz</a></li>
                 <li><a href="#gold" style="color:#FFAA00">Gold</a></li>
-                <li><a href="#amethyst" style="color:#9D4EDD">Amethyst</a></li>
                 <li><a href="#diamond" style="color:#56CFE1">Diamond</a></li>
+                <li><a href="#amethyst" style="color:#9D4EDD">Amethyst</a></li>
+                <li><a href="#emerald" style="color:#55ff55">Emerald</a></li>
                 <li><a href="#netherite" style="color:#AA0000">Netherite</a></li>
             </ul>
         </nav>
         <hr>
         <main>
             <section>
-                <h2 id="coal" style="color:#919599">Coal</h2>
+                <h2 id="oak" style="color:#bc7035">Oak</h2>
                 <p>Achieved after getting a single kill.</p>
+            </section>
+            <hr>
+            <section>
+                <h2 id="coal" style="color:#919599">Coal</h2>
+                <p>Achieved after getting 25 kills.</p>
 
                 <h3>Mining</h3>
                 <p><strong>Stone</strong></p>
@@ -46,7 +51,7 @@
             <hr>
             <section>
                 <h2 id="copper" style="color:#e36414">Copper</h2>
-                <p>Achieved after getting 25 kills.</p>
+                <p>Achieved after getting 50 kills.</p>
                 <br>
 
                 <h3>Mining</h3>
@@ -60,7 +65,7 @@
             <hr>
             <section>
                 <h2 id="iron" style="color:#edc4b3">Iron</h2>
-                <p>Achieved after getting 50 kills.</p>
+                <p>Achieved after getting 100 kills.</p>
                 <br>
 
                 <h3>Mining</h3>
@@ -77,7 +82,7 @@
                 <p>1/100 chance to get one of these while mining netherrack:</p>
                 <p>1/1 (100%) chance for gold nuggets</p>
             </section>
-            <hr>
+            <!--<hr>
             <section>
                 <h2 id="redstone" style="color:#ef233c">Redstone</h2>
                 <p>Achieved after getting 100 kills.</p>
@@ -92,7 +97,7 @@
                     <br>4/17 (23.53%) chance for iron ingots
                     <br>7/34 (20.59%) chance for redstone
                 </p>
-            </section>
+            </section> -->
             <hr>
             <section>
                 <h2 id="lapis" style="color:#0466C8">Lapis</h2>
@@ -110,7 +115,7 @@
                     <br>3/20 (15%) chance for getting lapis lazuli
                 </p>
             </section>
-            <hr>
+            <!-- <hr>
             <section>
                 <h2 id="quartz" style="color:#EDF2F4">Quartz</h2>
                 <p>Achieved after getting 500 kills.</p>
@@ -135,11 +140,11 @@
                     8/13 (61.54%) chance for gold nuggets
                     <br>5/13 (38.46%) chance for quartz
                 </p>
-            </section>
+            </section> -->
             <hr>
             <section>
                 <h2 id="gold" style="color:#FFAA00">Gold</h2>
-                <p>Achieved after getting 1000 kills.</p>
+                <p>Achieved after getting 500 kills.</p>
                 <br>
 
                 <h3>Mining</h3>
@@ -154,8 +159,39 @@
                     <br>5/49 (10.2%) chance for quartz
                     <br>4/49 (8.16%) chance for gold ingots
                 </p>
+
+                <p><strong>Netherrack</strong></p>
+                <p>1/100 chance to get one of these while mining netherrack:</p>
+                <p>
+                    8/13 (61.54%) chance for gold nuggets
+                    <br>5/13 (38.46%) chance for quartz
+                </p>
             </section>
             <hr>
+
+            <section>
+                <h2 id="diamond" style="color:#56CFE1">Diamond</h2>
+                <p>Achieved after getting 1000 kills.</p>
+                <br>
+
+                <h3>Mining</h3>
+                <p><strong>Stone</strong></p>
+                <p>1/100 chance to get one of these while mining stone:</p>
+                <p>
+                    2/11 (18.18%) chance for coal
+                    <br>9/55 (16.36%) chance for copper ingots
+                    <br>8/55 (14.55%) chance for iron ingots
+                    <br>7/55 (12.73%) chance for redstone
+                    <br>6/55 (10.91%) chance for lapis lazuli
+                    <br>1/11 (9.09%) chance for quartz
+                    <br>4/55 (7.27%) chance for gold ingots
+                    <br>3/55 (5.45%) chance for amethyst shards
+                    <br>2/55 (3.64%) chance for emeralds
+                    <br>1/55 (1.82%) chance for diamonds
+                </p>
+            </section>
+            <hr>
+
             <section>
                 <h2 id="amethyst" style="color:#9D4EDD">Amethyst</h2>
                 <p>Achieved after getting 2500 kills.</p>
@@ -176,28 +212,16 @@
                 </p>
             </section>
             <hr>
+
             <section>
-                <h2 id="diamond" style="color:#56CFE1">Diamond</h2>
+                <h2 id="emerald" style="color:#55ff55">Emerald</h2>
                 <p>Achieved after getting 5000 kills.</p>
                 <br>
 
-                <h3>Mining</h3>
-                <p><strong>Stone</strong></p>
-                <p>1/100 chance to get one of these while mining stone:</p>
-                <p>
-                    2/11 (18.18%) chance for coal
-                    <br>9/55 (16.36%) chance for copper ingots
-                    <br>8/55 (14.55%) chance for iron ingots
-                    <br>7/55 (12.73%) chance for redstone
-                    <br>6/55 (10.91%) chance for lapis lazuli
-                    <br>1/11 (9.09%) chance for quartz
-                    <br>4/55 (7.27%) chance for gold ingots
-                    <br>3/55 (5.45%) chance for amethyst shards
-                    <br>2/55 (3.64%) chance for emeralds
-                    <br>1/55 (1.82%) chance for diamonds
-                </p>
+
             </section>
             <hr>
+
             <section>
                 <h2 id="netherite" style="color:#AA0000">Netherite</h2>
                 <p>Achieved after getting 10000 kills.</p>
