fixed rank perk numbers

--- a/ranks.html
+++ b/ranks.html
@@ -151,13 +151,12 @@
                 <p><strong>Stone</strong></p>
                 <p>1/100 chance to get one of these while mining stone:</p>
                 <p>
-                    10/49 (20.41%) chance for coal
-                    <br>9/49 (18.37%) chance for copper ingots
-                    <br>8/49 (16.33%) chance for iron ingots
-                    <br>1/7 (14.29%) chance for redstone
-                    <br>6/49 (12.24%) chance for lapis lazuli
-                    <br>5/49 (10.2%) chance for quartz
-                    <br>4/49 (8.16%) chance for gold ingots
+                    5/22 (22.73%) chance for coal
+                    <br>9/44 (20.46%) chance for copper ingots
+                    <br>2/11 (18.18%) chance for iron ingots
+                    <br>7/44 (15.91%) chance for redstone
+                    <br>3/22 (13.64%) chance for lapis lazuli
+                    <br>1/11 (9.09%) chance for gold ingots
                 </p>
 
                 <p><strong>Netherrack</strong></p>
@@ -178,16 +177,13 @@
                 <p><strong>Stone</strong></p>
                 <p>1/100 chance to get one of these while mining stone:</p>
                 <p>
-                    2/11 (18.18%) chance for coal
-                    <br>9/55 (16.36%) chance for copper ingots
-                    <br>8/55 (14.55%) chance for iron ingots
-                    <br>7/55 (12.73%) chance for redstone
-                    <br>6/55 (10.91%) chance for lapis lazuli
-                    <br>1/11 (9.09%) chance for quartz
-                    <br>4/55 (7.27%) chance for gold ingots
-                    <br>3/55 (5.45%) chance for amethyst shards
-                    <br>2/55 (3.64%) chance for emeralds
-                    <br>1/55 (1.82%) chance for diamonds
+                    2/9 (22.22%) chance for coal
+                    <br>1/5 (20%) chance for copper ingots
+                    <br>8/45 (17.78%) chance for iron ingots
+                    <br>7/45 (15.56%) chance for redstone
+                    <br>2/15 (13.33%) chance for lapis lazuli
+                    <br>4/45 (8.89%) chance for gold ingots
+                    <br>1/45 (2.22%) chance for diamonds
                 </p>
             </section>
             <hr>
@@ -201,14 +197,15 @@
                 <p><strong>Stone</strong></p>
                 <p>1/100 chance to get one of these while mining stone:</p>
                 <p>
-                    5/26 (19.23%) chance for coal
-                    <br>9/52 (17.31%) chance for copper ingots
-                    <br>2/13 (15.38%) chance for iron ingots
-                    <br>7/52 (13.46%) chance for redstone
-                    <br>3/26 (11.54%) chance for lapis lazuli
-                    <br>5/52 (9.62%) chance for quartz
-                    <br>1/13 (7.69%) chance for gold ingots
-                    <br>3/52 (5.77%) chance for amethyst shards
+                    5/24 (20.83%) chance for coal
+                    <br>3/16 (18.75%) chance for copper ingots
+                    <br>1/6 (16.67%) chance for iron ingots
+                    <br>7/48 (14.58%) chance for redstone
+                    <br>1/8 (12.5%) chance for lapis lazuli
+                    <br>1/12 (8.33%) chamce gold ingots
+                    <br>1/48 (2.08%) chance for diamonds
+                    <br>1/16 (6.25%) chance for amethyst
+                    <br>1/24 (4.17%) chance for emeralds
                 </p>
             </section>
             <hr>
