added emerald rank

--- a/ranks.html
+++ b/ranks.html
@@ -205,7 +205,6 @@
                     <br>1/12 (8.33%) chamce gold ingots
                     <br>1/48 (2.08%) chance for diamonds
                     <br>1/16 (6.25%) chance for amethyst
-                    <br>1/24 (4.17%) chance for emeralds
                 </p>
             </section>
             <hr>
@@ -214,6 +213,18 @@
                 <h2 id="emerald" style="color:#55ff55">Emerald</h2>
                 <p>Achieved after getting 5000 kills.</p>
                 <br>
+
+                <p>
+                    1/5 (20%) chance for coal
+                    <br>9/50 (18%) chance for copper ingots
+                    <br>4/25 (16%) chance for iron ingots
+                    <br>7/50 (14%) chance for redstone
+                    <br>3/25 (12%) chance for lapis lazuli
+                    <br>2/25 (8%) chance for gold ingots
+                    <br>1/50 (2%) chance for diamonds
+                    <br>3/50 (6%) chance for amethyst
+                    <br>1/25 (4%) chance for emeralds
+                </p>
 
 
             </section>
