--- a/crafting.html
+++ b/crafting.html
@@ -66,10 +66,27 @@
                 <button onclick="drop('lapis')" class="dropbtn">Lapis</button>
                 <div id="lapis" class="hidden">
                     <a href="#brewing_stand">Brewing Stand</a>
+                    <a href="#crossbow">Crossbow</a>
                 </div>
             </div>
 
+            <br>
+            <br>
 
+            <div class="dropdown">
+                <button class="dropbtn" onclick="drop('diamond')">Diamond</button>
+                <div id="diamond" class="hidden">
+                    <a href="#diamond_axe">Diamond Axe</a>
+                    <a href="#diamond_boots">Diamond Boots</a>
+                    <a href="#diamond_chestplate">Diamond Chestplate</a>
+                    <a href="#diamond_helmet">Diamond Helmet</a>
+                    <a href="#diamond_hoe">Diamond Hoe</a>
+                    <a href="#diamond_leggings">Diamond Leggings</a>
+                    <a href="#diamond_pickaxe">Diamond Pickaxe</a>
+                    <a href="#diamond_shovel">Diamond Shovel</a>
+                    <a href="#diamond_sword">Diamond Sword</a>
+                </div>
+            </div>
 
             <!-- old
             <p>
@@ -117,9 +134,55 @@
 
             <section>
                 <h2>Lapis</h2>
+
                 <h3 id="brewing_stand">Brewing Stand</h3>
                 <p>Original recipe.</p>
                 <img src="images/crafting/lapis/brewing_stand.gif" width="400px">
+
+                <h3 id="crossbow">Crossbow</h3>
+                <p>Original recipe.</p>
+                <img src="images/crafting/lapis/crossbow.png" width="400px">
+            </section>
+            <hr>
+
+            <section>
+                <h2>Diamond</h2>
+
+                <h3 id="diamond_axe">Diamond Axe</h3>
+                <p>Original recipe.</p>
+                <img src="images/crafting/diamond/axe.png" width="400px">
+
+                <h3 id="diamond_boots">Diamond Boots</h3>
+                <p>Original recipe.</p>
+                <img src="images/crafting/diamond/boots.png" width="400px">
+
+                <h3 id="diamond_chestplate">Diamond Chestplate</h3>
+                <p>Original recipe.</p>
+                <img src="images/crafting/diamond/shirt.png" width="400px">
+
+                <h3 id="diamond_helmet">Diamond Helmet</h3>
+                <p>Original recipe.</p>
+                <img src="images/crafting/diamond/helmet.png" width="400px">
+
+                <h3 id="diamond_hoe">Diamond Hoe</h3>
+                <p>Original recipe.</p>
+                <img src="images/crafting/diamond/hoe.png" width="400px">
+
+                <h3 id="diamond_leggings">Diamond Leggings</h3>
+                <p>Original recipe.</p>
+                <img src="images/crafting/diamond/pants.png" width="400px">
+
+                <h3 id="diamond_pickaxe">Diamond Pickaxe</h3>
+                <p>Original recipe.</p>
+                <img src="images/crafting/diamond/pick.png" width="400px">
+
+                <h3 id="diamond_shovel">Diamond Shovel</h3>
+                <p>Original recipe.</p>
+                <img src="images/crafting/diamond/shovel.png" width="400px">
+
+                <h3 id="diamond_sword">Diamond Sword</h3>
+                <p>Original recipe.</p>
+                <img src="images/crafting/diamond/sword.png" width="400px">
             </section>
         </main>
         
