adjusted spacing to be more compact

--- a/crafting.html
+++ b/crafting.html
@@ -1,94 +1,94 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>Project Red | Crafting</title>
-        <link rel="stylesheet" href="main.css">
-        <link rel="stylesheet" href="craft.css">
+  <head>
+    <title>Project Red | Crafting</title>
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="craft.css">
 
-        <script>
-            function drop(name) {
-                if (document.getElementById(name).className == "show") {
-                    document.getElementById(name).className = "hidden";
-                } else {
-                    document.getElementById(name).className = "show";
-                }
-            }
-        </script>
-    </head>
+    <script>
+      function drop(name) {
+        if (document.getElementById(name).className == "show") {
+          document.getElementById(name).className = "hidden";
+        } else {
+          document.getElementById(name).className = "show";
+        }
+      }
+    </script>
+  </head>
 
-    <body>
-        <header>
-            <h1>Project Red Crafting</h1>
+  <body>
+    <header>
+      <h1>Project Red Crafting</h1>
 
-            <a href="./index.html">Home</a>
-            <a href="./ranks.html">Ranks</a>
-            <a href="./crafting.html">Crafting</a>
-            <a href="./func.html">Functions</a>
-        </header>
-        <hr>
-        <nav class="sidenav">
+      <a href="./index.html">Home</a>
+      <a href="./ranks.html">Ranks</a>
+      <a href="./crafting.html">Crafting</a>
+      <a href="./func.html">Functions</a>
+    </header>
+    <hr>
+    <nav class="sidenav">
 
-            <!-- Drop down menu -->
-            <div class="dropdown">
-                <button onclick="drop('default')" class="dropbtn">Default</button>
-                <div id="default" class="hidden">
-                    <a href="#arrow">Arrow</a>
-                    <a href="#door">Doors</a>
-                </div>
-            </div>
+      <!-- Drop down menu -->
+      <div class="dropdown">
+        <button onclick="drop('default')" class="dropbtn">Default</button>
+        <div id="default" class="hidden">
+          <a href="#arrow">Arrow</a>
+          <a href="#door">Doors</a>
+        </div>
+      </div>
 
-            <br>
-            <br>
+      <br>
+      <br>
 
-            <div class="dropdown">
-                <button onclick="drop('copper')" class="dropbtn">Copper</button>
-                <div id="copper" class="hidden">
-                    <a href="#bow">Bow</a>
-                </div>
-            </div>
+      <div class="dropdown">
+        <button onclick="drop('copper')" class="dropbtn">Copper</button>
+        <div id="copper" class="hidden">
+          <a href="#bow">Bow</a>
+        </div>
+      </div>
 
-            <br>
-            <br>
+      <br>
+      <br>
 
-            <div class="dropdown">
-                <button onclick="drop('iron')" class="dropbtn">Iron</button>
-                <div id="iron" class="hidden">
-                    <a href="#iron_arrow">Arrow</a>
-                    <a href="#door-rank">Doors</a>
-                </div>
-            </div>
+      <div class="dropdown">
+        <button onclick="drop('iron')" class="dropbtn">Iron</button>
+        <div id="iron" class="hidden">
+          <a href="#iron_arrow">Arrow</a>
+          <a href="#door-rank">Doors</a>
+        </div>
+      </div>
 
-            <br>
-            <br>
+      <br>
+      <br>
 
-            <div class="dropdown">
-                <button onclick="drop('lapis')" class="dropbtn">Lapis</button>
-                <div id="lapis" class="hidden">
-                    <a href="#brewing_stand">Brewing Stand</a>
-                    <a href="#crossbow">Crossbow</a>
-                </div>
-            </div>
+      <div class="dropdown">
+        <button onclick="drop('lapis')" class="dropbtn">Lapis</button>
+        <div id="lapis" class="hidden">
+          <a href="#brewing_stand">Brewing Stand</a>
+          <a href="#crossbow">Crossbow</a>
+        </div>
+      </div>
 
-            <br>
-            <br>
+      <br>
+      <br>
 
-            <div class="dropdown">
-                <button class="dropbtn" onclick="drop('diamond')">Diamond</button>
-                <div id="diamond" class="hidden">
-                    <a href="#diamond_axe">Diamond Axe</a>
-                    <a href="#diamond_boots">Diamond Boots</a>
-                    <a href="#diamond_chestplate">Diamond Chestplate</a>
-                    <a href="#diamond_helmet">Diamond Helmet</a>
-                    <a href="#diamond_hoe">Diamond Hoe</a>
-                    <a href="#diamond_leggings">Diamond Leggings</a>
-                    <a href="#diamond_pickaxe">Diamond Pickaxe</a>
-                    <a href="#diamond_shovel">Diamond Shovel</a>
-                    <a href="#diamond_sword">Diamond Sword</a>
-                </div>
-            </div>
+      <div class="dropdown">
+        <button class="dropbtn" onclick="drop('diamond')">Diamond</button>
+        <div id="diamond" class="hidden">
+          <a href="#diamond_axe">Diamond Axe</a>
+          <a href="#diamond_boots">Diamond Boots</a>
+          <a href="#diamond_chestplate">Diamond Chestplate</a>
+          <a href="#diamond_helmet">Diamond Helmet</a>
+          <a href="#diamond_hoe">Diamond Hoe</a>
+          <a href="#diamond_leggings">Diamond Leggings</a>
+          <a href="#diamond_pickaxe">Diamond Pickaxe</a>
+          <a href="#diamond_shovel">Diamond Shovel</a>
+          <a href="#diamond_sword">Diamond Sword</a>
+        </div>
+      </div>
 
-            <!-- old
+      <!-- old
             <p>
                 <strong>Default</strong>
                 <br><a href="#door">Doors</a>
@@ -96,96 +96,97 @@
                 <br><a href="#door-rank">Doors</a>
             </p>
             -->
-        </nav>
+    </nav>
 
-        <main>
-            <section>
-                <h2>Default</h2>
-                <h3 id="arrow">Arrow</h3>
-                <p>Original recipe, but outputs one arrow instead of 4.</p>
-                <img src="images/crafting/default/arrow.png" width="400px">
+    <main>
+      <section>
+        <h2>Default</h2>
+        <h3 id="arrow">Arrow</h3>
+        <p>Original recipe, but outputs one arrow instead of 4.</p>
+        <img src="images/crafting/default/arrow.png" width="400px">
 
-                <h3 id="door">Doors</h3>
-                <p>Now with an iron ingot for the door handle, and results in two doors rather than 3.</p>
-                <img src="images/crafting/default/doors.gif" width="400px">
-            </section>
-            <hr>
+        <h3 id="door">Doors</h3>
+        <p>Now with an iron ingot for the door handle, and results in two doors
+          rather than 3.</p>
+        <img src="images/crafting/default/doors.gif" width="400px">
+      </section>
+      <hr>
 
-            <section>
-                <h2>Copper</h2>
-                <h3 id="bow">Bow</h3>
-                <p>Original recipe.</p>
-                <img src="images/crafting/copper/bow.png" width="400px">
+      <section>
+        <h2>Copper</h2>
+        <h3 id="bow">Bow</h3>
+        <p>Original recipe.</p>
+        <img src="images/crafting/copper/bow.png" width="400px">
 
-            </section>
-            <hr>
+      </section>
+      <hr>
 
-            <section>
-                <h2>Iron</h2>
-                <h3 id="iron_arrow">Arrow</h3>
-                <p>Instead of flint, uses iron nuggets; outputs 4 arrows.</p>
-                <img src="images/crafting/iron/arrow.png" width="400px">
+      <section>
+        <h2>Iron</h2>
+        <h3 id="iron_arrow">Arrow</h3>
+        <p>Instead of flint, uses iron nuggets; outputs 4 arrows.</p>
+        <img src="images/crafting/iron/arrow.png" width="400px">
 
-                <h3 id="door-rank">Doors</h3>
-                <p>Original recipe.</p>
-                <img src="images/crafting/iron/rank_door.gif" width="400px">
-            </section>
-            <hr>
+        <h3 id="door-rank">Doors</h3>
+        <p>Original recipe.</p>
+        <img src="images/crafting/iron/rank_door.gif" width="400px">
+      </section>
+      <hr>
 
-            <section>
-                <h2>Lapis</h2>
+      <section>
+        <h2>Lapis</h2>
 
-                <h3 id="brewing_stand">Brewing Stand</h3>
-                <p>Original recipe.</p>
-                <img src="images/crafting/lapis/brewing_stand.gif" width="400px">
+        <h3 id="brewing_stand">Brewing Stand</h3>
+        <p>Original recipe.</p>
+        <img src="images/crafting/lapis/brewing_stand.gif" width="400px">
 
-                <h3 id="crossbow">Crossbow</h3>
-                <p>Original recipe.</p>
-                <img src="images/crafting/lapis/crossbow.png" width="400px">
-            </section>
-            <hr>
+        <h3 id="crossbow">Crossbow</h3>
+        <p>Original recipe.</p>
+        <img src="images/crafting/lapis/crossbow.png" width="400px">
+      </section>
+      <hr>
 
-            <section>
-                <h2>Diamond</h2>
+      <section>
+        <h2>Diamond</h2>
 
-                <h3 id="diamond_axe">Diamond Axe</h3>
-                <p>Original recipe.</p>
-                <img src="images/crafting/diamond/axe.png" width="400px">
+        <h3 id="diamond_axe">Diamond Axe</h3>
+        <p>Original recipe.</p>
+        <img src="images/crafting/diamond/axe.png" width="400px">
 
-                <h3 id="diamond_boots">Diamond Boots</h3>
-                <p>Original recipe.</p>
-                <img src="images/crafting/diamond/boots.png" width="400px">
+        <h3 id="diamond_boots">Diamond Boots</h3>
+        <p>Original recipe.</p>
+        <img src="images/crafting/diamond/boots.png" width="400px">
 
-                <h3 id="diamond_chestplate">Diamond Chestplate</h3>
-                <p>Original recipe.</p>
-                <img src="images/crafting/diamond/shirt.png" width="400px">
+        <h3 id="diamond_chestplate">Diamond Chestplate</h3>
+        <p>Original recipe.</p>
+        <img src="images/crafting/diamond/shirt.png" width="400px">
 
-                <h3 id="diamond_helmet">Diamond Helmet</h3>
-                <p>Original recipe.</p>
-                <img src="images/crafting/diamond/helmet.png" width="400px">
+        <h3 id="diamond_helmet">Diamond Helmet</h3>
+        <p>Original recipe.</p>
+        <img src="images/crafting/diamond/helmet.png" width="400px">
 
-                <h3 id="diamond_hoe">Diamond Hoe</h3>
-                <p>Original recipe.</p>
-                <img src="images/crafting/diamond/hoe.png" width="400px">
+        <h3 id="diamond_hoe">Diamond Hoe</h3>
+        <p>Original recipe.</p>
+        <img src="images/crafting/diamond/hoe.png" width="400px">
 
-                <h3 id="diamond_leggings">Diamond Leggings</h3>
-                <p>Original recipe.</p>
-                <img src="images/crafting/diamond/pants.png" width="400px">
+        <h3 id="diamond_leggings">Diamond Leggings</h3>
+        <p>Original recipe.</p>
+        <img src="images/crafting/diamond/pants.png" width="400px">
 
-                <h3 id="diamond_pickaxe">Diamond Pickaxe</h3>
-                <p>Original recipe.</p>
-                <img src="images/crafting/diamond/pick.png" width="400px">
+        <h3 id="diamond_pickaxe">Diamond Pickaxe</h3>
+        <p>Original recipe.</p>
+        <img src="images/crafting/diamond/pick.png" width="400px">
 
-                <h3 id="diamond_shovel">Diamond Shovel</h3>
-                <p>Original recipe.</p>
-                <img src="images/crafting/diamond/shovel.png" width="400px">
+        <h3 id="diamond_shovel">Diamond Shovel</h3>
+        <p>Original recipe.</p>
+        <img src="images/crafting/diamond/shovel.png" width="400px">
 
-                <h3 id="diamond_sword">Diamond Sword</h3>
-                <p>Original recipe.</p>
-                <img src="images/crafting/diamond/sword.png" width="400px">
-            </section>
-        </main>
-        
-    </body>
+        <h3 id="diamond_sword">Diamond Sword</h3>
+        <p>Original recipe.</p>
+        <img src="images/crafting/diamond/sword.png" width="400px">
+      </section>
+    </main>
+
+  </body>
 
 </html>
