--- a/crafting.html
+++ b/crafting.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Red | Crafting</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="craft.css">
