upgraded header style

--- a/crafting.html
+++ b/crafting.html
@@ -22,12 +22,15 @@
     <header>
       <h1>Project Red Crafting</h1>
 
-      <a href="./index.html">Home</a>
-      <a href="./ranks.html">Ranks</a>
-      <a href="./crafting.html">Crafting</a>
-      <a href="./func.html">Functions</a>
+      <nav>
+        <a href="./index.html">Home</a>
+        <a href="./ranks.html">Ranks</a>
+        <a href="./crafting.html">Crafting</a>
+        <a href="./func.html">Functions</a>
+      </nav>
     </header>
     <hr>
+
     <nav class="sidenav">
 
       <!-- Drop down menu -->
