--- a/func.html
+++ b/func.html
@@ -22,10 +22,12 @@
     <header>
       <h1>Project Red Functions</h1>
 
-      <a href="./index.html">Home</a>
-      <a href="./ranks.html">Ranks</a>
-      <a href="./crafting.html">Crafting</a>
-      <a href="./func.html">Functions</a>
+      <nav>
+        <a href="./index.html">Home</a>
+        <a href="./ranks.html">Ranks</a>
+        <a href="./crafting.html">Crafting</a>
+        <a href="./func.html">Functions</a>
+      </nav>
     </header>
     <hr>
 
