--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
   </head>
 
   <body>
+
     <header>
       <h1>Project Red</h1>
 
-      <a href="./index.html">Home</a>
-      <a href="./ranks.html">Ranks</a>
-      <a href="./crafting.html">Crafting</a>
-      <a href="./func.html">Functions</a>
+      <nav>
+        <a href="./index.html">Home</a>
+        <a href="./ranks.html">Ranks</a>
+        <a href="./crafting.html">Crafting</a>
+        <a href="./func.html">Functions</a>
+      </nav>
     </header>
     <hr>
-    <p>Coming 2021.</p>
+
+    <p id="coming-soon">Coming 2021.</p>
     <!-- <div class="flex-container">
             <div>1</div>
             <div>2</div>
